# GeneralPlotter

./: Cargo.toml  LICENSE  index.html  readme.md
assets/: sw.js
infra/: docker-compose.yml  nginx.conf
src/: app.rs  main.rs
src/consts/: mod.rs
src/core/: consts.rs  settings.rs
src/extractor/: extractor.rs  mod.rs  types.rs
src/extractor/serial/: libs.rs  mod.rs  wasm.rs  win.rs
src/libs/: message.rs  mod.rs  print.rs  sleep.rs  svg_img.rs  thread.rs  timer.rs  types.rs
src/libs/mpsc/: mod.rs  wasm.rs  win.rs
src/libs/save_csv/: mod.rs  wasm.rs  win.rs
src/libs/serials/: libs.rs  mod.rs  types.rs  wasm.rs  win.rs
src/logic/: config.rs  extractor.rs  logger.rs  main.rs  mod.rs  serializer.rs  state.rs  traits.rs  types.rs
src/ui/: chart.rs  mod.rs  panel.rs  settings.rs  state.rs  types.rs  ui.rs
src/ui/chart/: mod.rs
src/ui/components/: mod.rs
src/ui/components/central_panel/: mod.rs  ui.rs
src/ui/components/central_panel/chart/: mod.rs  settings.rs  ui.rs
src/ui/components/central_panel/terminal/: mod.rs  settings.rs  ui.rs
src/ui/components/chart/: mod.rs  settings.rs  ui.rs
src/ui/components/config_port/: mod.rs  settings.rs  ui.rs
src/ui/components/left_panel/: mod.rs  ui.rs
src/ui/components/left_panel/config_port/: mod.rs  ui.rs
src/ui/components/left_panel/description/: mod.rs  ui.rs
src/ui/components/left_panel/settings_modal/: mod.rs  tab_chart.rs  tab_terminal.rs  ui.rs
src/ui/components/right_panel/: mod.rs  ui.rs
src/ui/components/settings/: ui.rs
src/ui/components/settings_modal/: mod.rs  tab_terminal.rs  ui.rs
src/ui/components/terminal/: mod.rs  types.rs  ui.rs
src/ui/libs/: button_image.rs  load_img.rs  mod.rs  status.rs
src/ui/panel/: mod.rs  types.rs  ui.rs  utils.rs
src/ui/settings/: mod.rs  state.rs  types.rs  ui.rs
src/ui/styles/: dark.rs  ligth.rs  mod.rs
