[package]
name = "GeneralPlotter"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.33.0", features = ["ron", "serde"] }
egui = { version = "0.33.0", features = ["color-hex", "ron"] }
egui_extras = { version = "0.33.0", features = ["image", "svg"] }
egui_plot = "0.34.0"
serialport = "4.8.1"
image = "0.25.8"
serde = "1.0"
web-time = "1.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.70"
gloo-timers = "0.3.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
