[package]
name = "GeneralPlotter"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
]

[dependencies]
eframe = { version = "0.33.0", features = ["ron", "serde"] }
egui = { version = "0.33.0", features = ["color-hex", "ron"] }
egui_extras = { version = "0.33.0", features = [
    "image",
    "svg",
    "all_loaders",
    "gif",
] }
egui_plot = "0.34.0"
serde = "1.0"
image = "0.25.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.54"
tokio = { version = "1.38", features = ["sync", "macros", "rt"] }
futures = "0.3"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4.8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = [
    "ReadableStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "Navigator",
    "Window",
    "console",
] }
web-time = "1.1"
js-sys = "0.3"
